src/parser.output
   0  $accept : %entry% $end

   1  main : paragraphe EOF

   2  maj_mot : Mot_majuscule

   3  expression : Reste_division_euclidienne_debut expression Par expression
   4             | Parenthese_Gauche expression Parenthese_Droite
   5             | expression Plus expression
   6             | expression Fois expression
   7             | expression Egal expression
   8             | expression Different expression
   9             | Entier
  10             | Reel
  11             | Mot

  12  declaration : maj_mot Assigne expression Ponctuation_fin_phrase
  13              | Afficher expression Ponctuation_fin_phrase

  14  conditionnelle : Si expression Alors paragraphe Fin_condition Ponctuation_fin_phrase
  15                 | Si expression Alors paragraphe Sinon paragraphe Fin_condition Ponctuation_fin_phrase

  16  boucle_tant_que : Tant_que expression Alors paragraphe Fin_boucle Ponctuation_fin_phrase

  17  boucle_pour : Iterer Mot Allant_de expression A expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase
  18              | Iterer Mot Allant_de expression A expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase
  19              | Iterer Mot Allant_de expression A expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase

  20  instruction : declaration
  21              | fonction
  22              | conditionnelle
  23              | boucle_tant_que
  24              | boucle_pour
  25              | Incrementer Mot Ponctuation_fin_phrase
  26              | Incrementer Mot De expression Ponctuation_fin_phrase
  27              | Decrementer Mot Ponctuation_fin_phrase
  28              | Decrementer Mot De expression Ponctuation_fin_phrase

  29  paragraphe : instruction paragraphe
  30             | instruction

  31  parametres : Mot Virgule parametres
  32             | Mot

  33  fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase

  34  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (34)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	main  goto 11
	paragraphe  goto 12
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	declaration : Afficher . expression Ponctuation_fin_phrase  (13)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 25


state 4
	conditionnelle : Si . expression Alors paragraphe Fin_condition Ponctuation_fin_phrase  (14)
	conditionnelle : Si . expression Alors paragraphe Sinon paragraphe Fin_condition Ponctuation_fin_phrase  (15)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 26


state 5
	boucle_tant_que : Tant_que . expression Alors paragraphe Fin_boucle Ponctuation_fin_phrase  (16)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 27


state 6
	boucle_pour : Iterer . Mot Allant_de expression A expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)
	boucle_pour : Iterer . Mot Allant_de expression A expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)
	boucle_pour : Iterer . Mot Allant_de expression A expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Mot  shift 28
	.  error


state 7
	instruction : Incrementer . Mot Ponctuation_fin_phrase  (25)
	instruction : Incrementer . Mot De expression Ponctuation_fin_phrase  (26)

	Mot  shift 29
	.  error


state 8
	instruction : Decrementer . Mot Ponctuation_fin_phrase  (27)
	instruction : Decrementer . Mot De expression Ponctuation_fin_phrase  (28)

	Mot  shift 30
	.  error


state 9
	fonction : Commence . Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Mot  shift 31
	.  error


state 10
	maj_mot : Mot_majuscule .  (2)

	.  reduce 2


state 11
	%entry% : '\001' main .  (34)

	.  reduce 34


state 12
	main : paragraphe . EOF  (1)

	EOF  shift 32
	.  error


state 13
	declaration : maj_mot . Assigne expression Ponctuation_fin_phrase  (12)

	Assigne  shift 33
	.  error


state 14
	instruction : declaration .  (20)

	.  reduce 20


state 15
	instruction : conditionnelle .  (22)

	.  reduce 22


state 16
	instruction : boucle_tant_que .  (23)

	.  reduce 23


state 17
	instruction : boucle_pour .  (24)

	.  reduce 24


state 18
	paragraphe : instruction . paragraphe  (29)
	paragraphe : instruction .  (30)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	Sinon  reduce 30
	Fin_condition  reduce 30
	Fin_boucle  reduce 30
	Termine_sequence  reduce 30
	Termine_fonction  reduce 30
	EOF  reduce 30

	paragraphe  goto 34
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 19
	instruction : fonction .  (21)

	.  reduce 21


state 20
	expression : Parenthese_Gauche . expression Parenthese_Droite  (4)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 35


state 21
	expression : Reste_division_euclidienne_debut . expression Par expression  (3)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 36


state 22
	expression : Mot .  (11)

	.  reduce 11


state 23
	expression : Entier .  (9)

	.  reduce 9


state 24
	expression : Reel .  (10)

	.  reduce 10


state 25
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	declaration : Afficher expression . Ponctuation_fin_phrase  (13)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Ponctuation_fin_phrase  shift 41
	.  error


state 26
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	conditionnelle : Si expression . Alors paragraphe Fin_condition Ponctuation_fin_phrase  (14)
	conditionnelle : Si expression . Alors paragraphe Sinon paragraphe Fin_condition Ponctuation_fin_phrase  (15)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Alors  shift 42
	.  error


state 27
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	boucle_tant_que : Tant_que expression . Alors paragraphe Fin_boucle Ponctuation_fin_phrase  (16)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Alors  shift 43
	.  error


state 28
	boucle_pour : Iterer Mot . Allant_de expression A expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)
	boucle_pour : Iterer Mot . Allant_de expression A expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)
	boucle_pour : Iterer Mot . Allant_de expression A expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Allant_de  shift 44
	.  error


state 29
	instruction : Incrementer Mot . Ponctuation_fin_phrase  (25)
	instruction : Incrementer Mot . De expression Ponctuation_fin_phrase  (26)

	De  shift 45
	Ponctuation_fin_phrase  shift 46
	.  error


state 30
	instruction : Decrementer Mot . Ponctuation_fin_phrase  (27)
	instruction : Decrementer Mot . De expression Ponctuation_fin_phrase  (28)

	De  shift 47
	Ponctuation_fin_phrase  shift 48
	.  error


state 31
	fonction : Commence Mot . Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Ponctuation_fin_phrase  shift 49
	.  error


state 32
	main : paragraphe EOF .  (1)

	.  reduce 1


state 33
	declaration : maj_mot Assigne . expression Ponctuation_fin_phrase  (12)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 50


state 34
	paragraphe : instruction paragraphe .  (29)

	.  reduce 29


state 35
	expression : Parenthese_Gauche expression . Parenthese_Droite  (4)
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Parenthese_Droite  shift 51
	.  error


state 36
	expression : Reste_division_euclidienne_debut expression . Par expression  (3)
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Par  shift 52
	.  error


state 37
	expression : expression Plus . expression  (5)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 53


state 38
	expression : expression Egal . expression  (7)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 54


state 39
	expression : expression Fois . expression  (6)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 55


state 40
	expression : expression Different . expression  (8)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 56


state 41
	declaration : Afficher expression Ponctuation_fin_phrase .  (13)

	.  reduce 13


state 42
	conditionnelle : Si expression Alors . paragraphe Fin_condition Ponctuation_fin_phrase  (14)
	conditionnelle : Si expression Alors . paragraphe Sinon paragraphe Fin_condition Ponctuation_fin_phrase  (15)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 57
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 43
	boucle_tant_que : Tant_que expression Alors . paragraphe Fin_boucle Ponctuation_fin_phrase  (16)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 58
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 44
	boucle_pour : Iterer Mot Allant_de . expression A expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)
	boucle_pour : Iterer Mot Allant_de . expression A expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)
	boucle_pour : Iterer Mot Allant_de . expression A expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 59


state 45
	instruction : Incrementer Mot De . expression Ponctuation_fin_phrase  (26)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 60


state 46
	instruction : Incrementer Mot Ponctuation_fin_phrase .  (25)

	.  reduce 25


state 47
	instruction : Decrementer Mot De . expression Ponctuation_fin_phrase  (28)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 61


state 48
	instruction : Decrementer Mot Ponctuation_fin_phrase .  (27)

	.  reduce 27


state 49
	fonction : Commence Mot Ponctuation_fin_phrase . Dedans parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Dedans  shift 62
	.  error


state 50
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	declaration : maj_mot Assigne expression . Ponctuation_fin_phrase  (12)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Ponctuation_fin_phrase  shift 63
	.  error


state 51
	expression : Parenthese_Gauche expression Parenthese_Droite .  (4)

	.  reduce 4


state 52
	expression : Reste_division_euclidienne_debut expression Par . expression  (3)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 64


state 53
	expression : expression . Plus expression  (5)
	expression : expression Plus expression .  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)

	Fois  shift 39
	Egal  reduce 5
	Different  reduce 5
	Parenthese_Droite  reduce 5
	Alors  reduce 5
	Par  reduce 5
	A  reduce 5
	Compris  reduce 5
	Non_compris  reduce 5
	Agir  reduce 5
	Ponctuation_fin_phrase  reduce 5


state 54
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression Egal expression .  (7)
	expression : expression . Different expression  (8)

	Plus  shift 37
	Fois  shift 39
	Parenthese_Droite  reduce 7
	Alors  reduce 7
	Par  reduce 7
	A  reduce 7
	Compris  reduce 7
	Non_compris  reduce 7
	Agir  reduce 7
	Ponctuation_fin_phrase  reduce 7


state 55
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression Fois expression .  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)

	.  reduce 6


state 56
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	expression : expression Different expression .  (8)

	Plus  shift 37
	Fois  shift 39
	Parenthese_Droite  reduce 8
	Alors  reduce 8
	Par  reduce 8
	A  reduce 8
	Compris  reduce 8
	Non_compris  reduce 8
	Agir  reduce 8
	Ponctuation_fin_phrase  reduce 8


state 57
	conditionnelle : Si expression Alors paragraphe . Fin_condition Ponctuation_fin_phrase  (14)
	conditionnelle : Si expression Alors paragraphe . Sinon paragraphe Fin_condition Ponctuation_fin_phrase  (15)

	Sinon  shift 65
	Fin_condition  shift 66
	.  error


state 58
	boucle_tant_que : Tant_que expression Alors paragraphe . Fin_boucle Ponctuation_fin_phrase  (16)

	Fin_boucle  shift 67
	.  error


state 59
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	boucle_pour : Iterer Mot Allant_de expression . A expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)
	boucle_pour : Iterer Mot Allant_de expression . A expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)
	boucle_pour : Iterer Mot Allant_de expression . A expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	A  shift 68
	.  error


state 60
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	instruction : Incrementer Mot De expression . Ponctuation_fin_phrase  (26)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Ponctuation_fin_phrase  shift 69
	.  error


state 61
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	instruction : Decrementer Mot De expression . Ponctuation_fin_phrase  (28)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Ponctuation_fin_phrase  shift 70
	.  error


state 62
	fonction : Commence Mot Ponctuation_fin_phrase Dedans . parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Mot  shift 71
	.  error

	parametres  goto 72


state 63
	declaration : maj_mot Assigne expression Ponctuation_fin_phrase .  (12)

	.  reduce 12


state 64
	expression : Reste_division_euclidienne_debut expression Par expression .  (3)
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)

	Fois  shift 39
	Plus  reduce 3
	Egal  reduce 3
	Different  reduce 3
	Parenthese_Droite  reduce 3
	Alors  reduce 3
	Par  reduce 3
	A  reduce 3
	Compris  reduce 3
	Non_compris  reduce 3
	Agir  reduce 3
	Ponctuation_fin_phrase  reduce 3


state 65
	conditionnelle : Si expression Alors paragraphe Sinon . paragraphe Fin_condition Ponctuation_fin_phrase  (15)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 73
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 66
	conditionnelle : Si expression Alors paragraphe Fin_condition . Ponctuation_fin_phrase  (14)

	Ponctuation_fin_phrase  shift 74
	.  error


state 67
	boucle_tant_que : Tant_que expression Alors paragraphe Fin_boucle . Ponctuation_fin_phrase  (16)

	Ponctuation_fin_phrase  shift 75
	.  error


state 68
	boucle_pour : Iterer Mot Allant_de expression A . expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)
	boucle_pour : Iterer Mot Allant_de expression A . expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)
	boucle_pour : Iterer Mot Allant_de expression A . expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Parenthese_Gauche  shift 20
	Reste_division_euclidienne_debut  shift 21
	Mot  shift 22
	Entier  shift 23
	Reel  shift 24
	.  error

	expression  goto 76


state 69
	instruction : Incrementer Mot De expression Ponctuation_fin_phrase .  (26)

	.  reduce 26


state 70
	instruction : Decrementer Mot De expression Ponctuation_fin_phrase .  (28)

	.  reduce 28


state 71
	parametres : Mot . Virgule parametres  (31)
	parametres : Mot .  (32)

	Virgule  shift 77
	Ponctuation_fin_phrase  reduce 32


state 72
	fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres . Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Ponctuation_fin_phrase  shift 78
	.  error


state 73
	conditionnelle : Si expression Alors paragraphe Sinon paragraphe . Fin_condition Ponctuation_fin_phrase  (15)

	Fin_condition  shift 79
	.  error


state 74
	conditionnelle : Si expression Alors paragraphe Fin_condition Ponctuation_fin_phrase .  (14)

	.  reduce 14


state 75
	boucle_tant_que : Tant_que expression Alors paragraphe Fin_boucle Ponctuation_fin_phrase .  (16)

	.  reduce 16


state 76
	expression : expression . Plus expression  (5)
	expression : expression . Fois expression  (6)
	expression : expression . Egal expression  (7)
	expression : expression . Different expression  (8)
	boucle_pour : Iterer Mot Allant_de expression A expression . Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)
	boucle_pour : Iterer Mot Allant_de expression A expression . Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)
	boucle_pour : Iterer Mot Allant_de expression A expression . Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Plus  shift 37
	Egal  shift 38
	Fois  shift 39
	Different  shift 40
	Compris  shift 80
	Non_compris  shift 81
	Agir  shift 82
	.  error


state 77
	parametres : Mot Virgule . parametres  (31)

	Mot  shift 71
	.  error

	parametres  goto 83


state 78
	fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase . Proceder paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Proceder  shift 84
	.  error


state 79
	conditionnelle : Si expression Alors paragraphe Sinon paragraphe Fin_condition . Ponctuation_fin_phrase  (15)

	Ponctuation_fin_phrase  shift 85
	.  error


state 80
	boucle_pour : Iterer Mot Allant_de expression A expression Compris . Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (17)

	Agir  shift 86
	.  error


state 81
	boucle_pour : Iterer Mot Allant_de expression A expression Non_compris . Agir paragraphe Termine_sequence Ponctuation_fin_phrase  (18)

	Agir  shift 87
	.  error


state 82
	boucle_pour : Iterer Mot Allant_de expression A expression Agir . paragraphe Termine_sequence Ponctuation_fin_phrase  (19)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 88
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 83
	parametres : Mot Virgule parametres .  (31)

	.  reduce 31


state 84
	fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder . paragraphe Termine_fonction Ponctuation_fin_phrase  (33)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 89
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 85
	conditionnelle : Si expression Alors paragraphe Sinon paragraphe Fin_condition Ponctuation_fin_phrase .  (15)

	.  reduce 15


state 86
	boucle_pour : Iterer Mot Allant_de expression A expression Compris Agir . paragraphe Termine_sequence Ponctuation_fin_phrase  (17)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 90
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 87
	boucle_pour : Iterer Mot Allant_de expression A expression Non_compris Agir . paragraphe Termine_sequence Ponctuation_fin_phrase  (18)

	Afficher  shift 3
	Si  shift 4
	Tant_que  shift 5
	Iterer  shift 6
	Incrementer  shift 7
	Decrementer  shift 8
	Commence  shift 9
	Mot_majuscule  shift 10
	.  error

	paragraphe  goto 91
	maj_mot  goto 13
	declaration  goto 14
	conditionnelle  goto 15
	boucle_tant_que  goto 16
	boucle_pour  goto 17
	instruction  goto 18
	fonction  goto 19


state 88
	boucle_pour : Iterer Mot Allant_de expression A expression Agir paragraphe . Termine_sequence Ponctuation_fin_phrase  (19)

	Termine_sequence  shift 92
	.  error


state 89
	fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder paragraphe . Termine_fonction Ponctuation_fin_phrase  (33)

	Termine_fonction  shift 93
	.  error


state 90
	boucle_pour : Iterer Mot Allant_de expression A expression Compris Agir paragraphe . Termine_sequence Ponctuation_fin_phrase  (17)

	Termine_sequence  shift 94
	.  error


state 91
	boucle_pour : Iterer Mot Allant_de expression A expression Non_compris Agir paragraphe . Termine_sequence Ponctuation_fin_phrase  (18)

	Termine_sequence  shift 95
	.  error


state 92
	boucle_pour : Iterer Mot Allant_de expression A expression Agir paragraphe Termine_sequence . Ponctuation_fin_phrase  (19)

	Ponctuation_fin_phrase  shift 96
	.  error


state 93
	fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction . Ponctuation_fin_phrase  (33)

	Ponctuation_fin_phrase  shift 97
	.  error


state 94
	boucle_pour : Iterer Mot Allant_de expression A expression Compris Agir paragraphe Termine_sequence . Ponctuation_fin_phrase  (17)

	Ponctuation_fin_phrase  shift 98
	.  error


state 95
	boucle_pour : Iterer Mot Allant_de expression A expression Non_compris Agir paragraphe Termine_sequence . Ponctuation_fin_phrase  (18)

	Ponctuation_fin_phrase  shift 99
	.  error


state 96
	boucle_pour : Iterer Mot Allant_de expression A expression Agir paragraphe Termine_sequence Ponctuation_fin_phrase .  (19)

	.  reduce 19


state 97
	fonction : Commence Mot Ponctuation_fin_phrase Dedans parametres Ponctuation_fin_phrase Proceder paragraphe Termine_fonction Ponctuation_fin_phrase .  (33)

	.  reduce 33


state 98
	boucle_pour : Iterer Mot Allant_de expression A expression Compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase .  (17)

	.  reduce 17


state 99
	boucle_pour : Iterer Mot Allant_de expression A expression Non_compris Agir paragraphe Termine_sequence Ponctuation_fin_phrase .  (18)

	.  reduce 18


43 terminals, 13 nonterminals
35 grammar rules, 100 states
